// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`parseManifest test with import export to be trimmed while building 1`] = `
"// dev/types.ts
function defineManifest(manifest) {
  return {
    manifest_version: 3,
    ...manifest
  };
}

// dev/test/resources/manifest.ts
var manifest = defineManifest({
  name: "Test",
  version: "0.0.1"
});

// dev/test/resources/importExport.ts
console.log(manifest);
function test() {
  return "test";
}
test();
var name = "test";
{}

class Test {
  constructor() {
    console.log("test");
  }
}
new Test;
{
  name:
    ;
}
"
`;

exports[`setServiceWorker test with no background info, so creating connection and keepAlive as background info 1`] = `
"import { Connection } from "./connection";
import { KeepAlive } from "./keepAlive";
// IMPORT // Do not remove!

new Connection().connect();
new KeepAlive();
"
`;

exports[`setServiceWorker test with service_worker, pointing to an existing file, creating compose 1`] = `
"import { Connection } from "./connection";
import { KeepAlive } from "./keepAlive";
import "./test/resources/test1.ts";

new Connection().connect();
new KeepAlive();
"
`;
